# giflib_test

./: CMakeLists.txt
include/giflib/: gif2rgb  gifbg  gifbuild  gifclrmp  gifcolor  gifecho  giffilter  giffix  gifhisto  gifinto  gifsponge  giftext  giftool  gifwedge
src/: main.cpp
src/png/: TinyPngOut.cpp
